mobile whitespace bug fix

--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
   min-height: -webkit-fill-available;
+  min-width: -webkit-fill-available;
 }
 
 html {
   height: -webkit-fill-available;
+  width: -webkit-fill-available;
 }
 
 .video-header {
@@ -12,11 +14,13 @@ html {
   width: 100vw;
   height: 100vh;
   height: -webkit-fill-available;
+  width: -webkit-fill-available;
 }
 
 .video-header, .video-header video, .video-header .viewport-header {
   width: 100vw;
   height: 100vh;
+  width: -webkit-fill-available;
   height: -webkit-fill-available;
   position: absolute;
   top: 0;
@@ -32,6 +36,7 @@ html {
 .video-header .viewport-header {
   display: -webkit-box;
   display: -ms-flexbox;
+  overflow: hidden;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
